--- a/css/elevated-button/style.css
+++ b/css/elevated-button/style.css
@@ -5,17 +5,17 @@ div.btn{
     background-color: peru;
     padding: 50px;
     width: 200px;
-    box-shadow: grey 10px 10px 10px;
+    box-shadow: blue 10px 10px 10px;
     transition: 0.8s;
     border-radius: 10px;
 }
 div.btn:hover{
     transform: translate(-10px, -10px);
-    box-shadow: grey 20px 20px 20px;
+    box-shadow: blue 20px 20px 20px;
     transition: 0.5s;
 }
 div.btn:active {
    transform: translate(5px,5px);
-   box-shadow: grey 5px 5px 5px;
+   box-shadow: blue 5px 5px 5px;
    transition: 0.2s;
 }
